...
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txtViewUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:textColor="#FFF"
            android:textSize="32sp"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgViewProfile"
            app:layout_constraintVertical_bias="0.94" />
    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabFavorite"
        android:src="@drawable/ic_star_border_white_24dp"
        android:tint="#fdca2a"
        android:backgroundTint="#FFF"
        app:borderWidth="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
